WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238352
Include object IDs in logs and assert in AXIsolatedTree and WebAccessibilityObjectWrapperBase
https://bugs.webkit.org/show_bug.cgi?id=238352
Summary
Include object IDs in logs and assert in AXIsolatedTree and WebAccessibilityO...
Tyler Wilcock
Reported
2022-03-24 15:58:13 PDT
Include object IDs in logs and assert in AXIsolatedTree and WebAccessibilityObjectWrapperBase
Attachments
Patch
(3.51 KB, patch)
2022-03-24 16:01 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-03-24 15:58:22 PDT
<
rdar://problem/90798515
>
Tyler Wilcock
Comment 2
2022-03-24 16:01:20 PDT
Created
attachment 455697
[details]
Patch
EWS
Comment 3
2022-03-25 09:09:06 PDT
Committed
r291855
(
248867@main
): <
https://commits.webkit.org/248867@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 455697
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug