Include object IDs in logs and assert in AXIsolatedTree and WebAccessibilityObjectWrapperBase https://bugs.webkit.org/show_bug.cgi?id=238352

Reviewed by Chris Fleizach.

I've found this additional information to be useful in other branches I'm working on.

* accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::removeSubtreeFromNodeMap):
* accessibility/mac/WebAccessibilityObjectWrapperBase.mm:
(-[WebAccessibilityObjectWrapperBase detachIsolatedObject:]):



Canonical link: https://commits.webkit.org/248867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291855 268f45cc-cd09-0410-ab3c-d52691b4dbfc